# kgraphviewer

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile.am  README  TODO  config-kgraphviewer.h.cmake  configure.in.in  kgraphviewer.categories  kgraphviewer.kdevelop  old_graphviz.diff  snapcraft.yaml
cmake/: FindDOT.cmake  FindGraphViz.cmake  FindGraphviz.cmake
doc/: CMakeLists.txt
doc/en_US/: CMakeLists.txt  index.docbook  kgraphviewer-snap-main.eps
po/ar/: kgraphviewer.po
po/be/: kgraphviewer.po
po/bg/: kgraphviewer.po
po/bs/: kgraphviewer.po
po/ca/: kgraphviewer.po
po/ca/docs/kgraphviewer/: index.docbook
po/ca@valencia/: kgraphviewer.po
po/cs/: kgraphviewer.po
po/da/: kgraphviewer.po
po/de/: kgraphviewer.po
po/de/docs/kgraphviewer/: index.docbook
po/el/: kgraphviewer.po
po/en_GB/: kgraphviewer.po
po/eo/: kgraphviewer.po
po/es/: kgraphviewer.po
po/et/: kgraphviewer.po
po/et/docs/kgraphviewer/: index.docbook
po/eu/: kgraphviewer.po
po/fi/: kgraphviewer.po
po/fr/: kgraphviewer.po
po/ga/: kgraphviewer.po
po/gl/: kgraphviewer.po
po/he/: kgraphviewer.po
po/hi/: kgraphviewer.po
po/hne/: kgraphviewer.po
po/hr/: kgraphviewer.po
po/hu/: kgraphviewer.po
po/ia/: kgraphviewer.po
po/is/: kgraphviewer.po
po/it/: kgraphviewer.po
po/it/docs/kgraphviewer/: index.docbook
po/ja/: kgraphviewer.po
po/ka/: kgraphviewer.po
po/km/: kgraphviewer.po
po/ko/: kgraphviewer.po
po/ku/: kgraphviewer.po
po/lt/: kgraphviewer.po
po/lv/: kgraphviewer.po
po/mai/: kgraphviewer.po
po/mr/: kgraphviewer.po
po/nb/: kgraphviewer.po
po/nds/: kgraphviewer.po
po/nl/: kgraphviewer.po
po/nl/docs/kgraphviewer/: index.docbook
po/nn/: kgraphviewer.po
po/pa/: kgraphviewer.po
po/pl/: kgraphviewer.po
po/pt/: kgraphviewer.po
po/pt_BR/: kgraphviewer.po
po/ro/: kgraphviewer.po
po/ru/: kgraphviewer.po
po/sa/: kgraphviewer.po
po/se/: kgraphviewer.po
po/sk/: kgraphviewer.po
po/sl/: kgraphviewer.po
po/sv/: kgraphviewer.po
po/th/: kgraphviewer.po
po/tr/: kgraphviewer.po
po/ug/: kgraphviewer.po
po/uk/: kgraphviewer.po
po/vi/: kgraphviewer.po
po/zh_CN/: kgraphviewer.po
po/zh_TW/: kgraphviewer.po
src/: CMakeLists.txt  KGraphEditorElementTreeWidget.cpp  KGraphEditorElementTreeWidget.h  KGraphEditorNodesTreeWidget.cpp  KGraphEditorNodesTreeWidget.h  Makefile  Makefile.am  Messages.sh  Singleton.h  dcopkgraphvieweriface.h  kgrapheditor.cpp  kgrapheditor.desktop  kgrapheditor.h  kgrapheditor.qrc  kgrapheditorConfigDialog.cpp  kgrapheditorConfigDialog.h  kgrapheditormain.cpp  kgrapheditorsettings.kcfg  kgrapheditorsettings.kcfgc  kgrapheditorui.rc  kgraphviewer.appdata.xml  kgraphviewer.cpp  kgraphviewer.desktop  kgraphviewer.h  kgraphviewer.lsm  kgraphviewer.qrc  kgraphviewer.rc  kgraphviewerConfigDialog.cpp  kgraphviewerConfigDialog.h  kgraphviewer_shell.rc  kgraphviewersettings.kcfg  kgraphviewersettings.kcfgc  kgraphviewerui.rc  main.cpp  org.kde.kgrapheditor.desktop  org.kde.kgrapheditor.xml  org.kde.kgraphviewer.appdata.xml  org.kde.kgraphviewer.desktop  org.kde.kgraphviewer.xml  preferences.ui  (+7 more)
src/kgraphviz/: CMakeLists.txt  canvasedge.cpp  canvasedge.h  canvasedge_p.h  canvaselement.cpp  canvaselement.h  canvaselement_p.h  canvasnode.cpp  canvasnode.h  canvassubgraph.cpp  canvassubgraph.h  dotgraph.cpp  dotgraph.h  dotgraph_p.h  dotgraphscene.cpp  dotgraphscene.h  dotgraphview.cpp  dotgraphview.h  dotgraphview_p.h  graphedge.cpp  graphedge.h  graphedge_p.h  graphelement.cpp  graphelement.h  graphelement_p.h  graphexporter.cpp  graphexporter.h  graphio.cpp  graphio.h  graphio_p.h  graphnode.cpp  graphnode.h  graphsubgraph.cpp  graphsubgraph.h  kgraphviz_export.h  pannerview.cpp  pannerview.h
src/kgraphviz/support/: DotGraphParsingHelper.cpp  DotGraphParsingHelper.h  dot2qtconsts.cpp  dot2qtconsts.h  dotdefaults.h  dotgrammar.cpp  dotgrammar.h  dotgraphparsinghelper.cpp  dotgraphparsinghelper.h  dotrenderop.h  fontscache.cpp  fontscache.h  layoutagraphthread.cpp  layoutagraphthread.h  loadagraphthread.cpp  loadagraphthread.h  singleton.h
src/part/: CMakeLists.txt  DotGraphParsingHelper.cpp  DotGraphParsingHelper.h  FontsCache.cpp  FontsCache.h  KGraphViewerPartConfig.cmake.in  KgvGlobal.cpp  KgvGlobal.h  KgvPageLayout.cpp  KgvPageLayout.h  KgvPageLayoutColumns.cpp  KgvPageLayoutColumns.h  KgvPageLayoutColumnsBase.ui  KgvPageLayoutDia.cpp  KgvPageLayoutDia.h  KgvPageLayoutHeader.cpp  KgvPageLayoutHeader.h  KgvPageLayoutHeaderBase.ui  KgvPageLayoutSize.cpp  KgvPageLayoutSize.h  KgvUnit.cpp  KgvUnit.h  KgvUnitWidgets.cpp  KgvUnitWidgets.h  Makefile.am  canvasedge.cpp  canvasedge.h  canvaselement.cpp  canvaselement.h  canvasnode.cpp  canvasnode.h  canvassubgraph.cpp  canvassubgraph.h  convertkinstance.diff  dot2qtconsts.cpp  dot2qtconsts.h  dotdefaults.h  dotgrammar.cpp  dotgrammar.h  dotgraph.cpp  (+46 more)
src/printing/: KgvGenStyles.cpp  KgvGenStyles.h  KgvGlobal.cpp  KgvGlobal.h  KgvPageLayout.cpp  KgvPageLayout.h  KgvPageLayoutColumns.cpp  KgvPageLayoutColumns.h  KgvPageLayoutColumnsBase.ui  KgvPageLayoutDia.cpp  KgvPageLayoutDia.h  KgvPageLayoutHeader.cpp  KgvPageLayoutHeader.h  KgvPageLayoutHeaderBase.ui  KgvPageLayoutSize.cpp  KgvPageLayoutSize.h  KgvUnit.cpp  KgvUnit.h  KgvUnitWidgets.cpp  KgvUnitWidgets.h  Makefile.am  simpleprintingcommand.cpp  simpleprintingcommand.h  simpleprintingengine.cpp  simpleprintingengine.h  simpleprintingpagesetup.cpp  simpleprintingpagesetup.h  simpleprintingpagesetupbase.ui  simpleprintingsettings.cpp  simpleprintingsettings.h  simpleprintpreviewwindow.cpp  simpleprintpreviewwindow.h  simpleprintpreviewwindow_p.cpp  simpleprintpreviewwindow_p.h
src/shared/: CMakeLists.txt  kgraphviewer_interface.h
tests/: CMakeLists.txt
tests/kgraphviz/: CMakeLists.txt  dotgraphtests.cpp  graphiotests.cpp  utils.h
tests/kgraphviz/examples/: CMakeLists.txt  directed-acyclic-graph.dot  directed-self-looped-graph.dot  subgraph.dot  undirected-acyclic-graph.dot  undirected-self-looped-graph.dot
(+5 files in other folders)
